tests/snapshots/parse_errors__missing_rhs.snap
---
source: tests/parse_errors.rs
expression: merged
---
stdout:


stderr:
Error: Parse error
   ╭─[<unknown>:1:13]
   │
 1 │ print 1 + ;
   │           ┬  
   │           ╰── Expected primary
───╯



